--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 5%;
+  justify-content: center;
+  margin: 3%;
 }
 
 .container__content .forms {
