--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -13,7 +13,9 @@
 }
 
 textarea {
+  max-width: 93%;
   border-radius: 15px;
+  border-color: #B0B0B0;
   resize: none;
   padding: 18px 15px;
   font-family: var(--font-nunito);
